objects/FinServ__FinancialAccountTransaction__c.object
<CustomObject>
    <description>Represents information about financial account transactions.</description>
    <fields>
        <fullName>FinServ__Amount__c</fullName>
        <description>The amount of each transaction. This field is used for reconciliation.</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BillingStatements__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Statement</label>
        <referenceTo>FinServ__BillingStatement__c</referenceTo>
        <relationshipLabel>Financial Account Transactions</relationshipLabel>
        <relationshipName>FinancialAccountTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__CardAccountID__c</fullName>
        <description>The card number for each transaction. This field is used for reconciliation logic.</description>
        <label>Card Account ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the claim linked to this transaction</description>
        <label>Claim</label>
        <referenceTo>Claim</referenceTo>
        <relationshipLabel>Financial Account Transactions</relationshipLabel>
        <relationshipName>FinancialAccountTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Description__c</fullName>
        <description>Describes each transaction. This field is used for reconciliation and categorization.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__DisputeReason__c</fullName>
        <description>Reason for the dispute.</description>
        <label>Dispute Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate Transactions</fullName>
                </value>
                <value>
                    <fullName>Transaction not recognized</fullName>
                </value>
                <value>
                    <fullName>Suspected Fraud</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Account Transactions</relationshipLabel>
        <relationshipName>FinancialAccountTranslations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InsurancePolicy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the policy linked to this transaction</description>
        <label>Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Financial Account Transactions</relationshipLabel>
        <relationshipName>FinancialAccountTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__IsDisputed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the financial transaction is a disputed transaction.</description>
        <label>Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MerchantCategoryCode__c</fullName>
        <description>Merchant category code.</description>
        <label>Merchant Category Code (MCCode)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PostDate__c</fullName>
        <description>The date each transaction posted to the account.</description>
        <label>Post Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__RunningBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Running balance for this respective transaction.</description>
        <label>Running Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceTransactionType__c</fullName>
        <description>Secondary Account holder transaction type of the account.</description>
        <label>Source Transaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TransactionDate__c</fullName>
        <description>The date each transaction occurred. This field is used for reconciliation.</description>
        <label>Transaction Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__TransactionId__c</fullName>
        <description>Unique transaction ID for each transaction.</description>
        <label>Transaction Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__TransactionStatus__c</fullName>
        <description>The status of transaction.</description>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TransactionSubtype__c</fullName>
        <label>Transaction Sub-type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FinServ__TransactionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Deposit</fullName>
                </value>
                <value>
                    <fullName>On-Us Check Deposit</fullName>
                </value>
                <value>
                    <fullName>Transit Check Deposit</fullName>
                </value>
                <value>
                    <fullName>Foreign Cash Deposit</fullName>
                </value>
                <value>
                    <fullName>Bill Payment</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>ATM Deposit</fullName>
                </value>
                <value>
                    <fullName>ATM Withdrawal</fullName>
                </value>
                <value>
                    <fullName>POS withdrawal</fullName>
                </value>
                <value>
                    <fullName>Misc. Credit</fullName>
                </value>
                <value>
                    <fullName>Misc. Debit</fullName>
                </value>
                <value>
                    <fullName>Loan Payment</fullName>
                </value>
                <value>
                    <fullName>Mortgage Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Card Cash Advance</fullName>
                </value>
                <value>
                    <fullName>Internal Funds Transfer</fullName>
                </value>
                <value>
                    <fullName>Reversal</fullName>
                </value>
                <value>
                    <fullName>Interest Earned</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Merchant Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TransactionType__c</fullName>
        <description>Type of the transaction. This field is used to determine whether the transaction falls under income or expense. Also used in reconciliation logic.</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>OUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__WaiverReason__c</fullName>
        <description>Reason for waiving the charges or fees.</description>
        <label>Waiver Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate fees charged</fullName>
                </value>
                <value>
                    <fullName>Fees Discovery</fullName>
                </value>
                <value>
                    <fullName>Maintain customer relationship</fullName>
                </value>
                <value>
                    <fullName>Notification not received</fullName>
                </value>
                <value>
                    <fullName>Others.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_PortfolioCode__c</fullName>
        <label>Portfolio Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_AmountPortfolioCurrency__c</fullName>
        <description>Cash flow amount in Portfolio currency</description>
        <label>Amount Portfolio Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLI_Comment__c</fullName>
        <description>Allows Client Fund Managers to comment on a specific transaction</description>
        <label>Comment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Takeon</fullName>
                </value>
                <value>
                    <fullName>Contribution</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_FlowPercentageOfFund__c</fullName>
        <description>The percentage of value of Financial Account Transaction as a percentage of the entire fund.</description>
        <label>Flow Percentage of Fund</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SLI_PortfolioCurrency__c</fullName>
        <description>The currency in which the Investment account&apos;s reporting will be done</description>
        <label>Portfolio Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSC_CapturedDate__c</fullName>
        <description>Date when transaction is captured</description>
        <label>Captured Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLSC_TransactionCurrency__c</fullName>
        <description>Reporting currency for the transaction</description>
        <label>Transaction Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSC_TransactionNetAmount__c</fullName>
        <description>Net amount after initial fees are removed from gross amount per transaction</description>
        <label>Transaction Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSC_TransactionTotalInitialFee__c</fullName>
        <description>Total initial fees charged by the advisor for the transaction</description>
        <label>Transaction Total Initial Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSC_TransactionTotalUnits__c</fullName>
        <description>Total number of unit per transaction type</description>
        <label>Transaction Total Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSC_TransactionUnitPrice__c</fullName>
        <description>The price of each unit for the particular transaction</description>
        <label>Transaction Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSC_TransactionValueDate__c</fullName>
        <description>Transaction value date for a specific fund transaction</description>
        <label>Transaction Value Date</label>
        <type>DateTime</type>
    </fields>
    <label>Financial Account Transaction</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLI_My_Transactions</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>My Transactions</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>T-{000000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Transactions</pluralLabel>
    <recordTypes>
        <fullName>SLC_FinancialAccountTransaction</fullName>
        <active>true</active>
        <label>STANLIB Financial Account Transaction</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>SLC_CodeShare__c</fullName>
        <label>Code Share</label>
    </sharingReasons>
</CustomObject>